# getlicense

./: Cargo.toml  README.md  get.py  getlicense.zsh  install.sh  license_cache.json
src/: api.rs  cache.rs  cli.rs  constants.rs  display.rs  error.rs  main.rs  models.rs  parser.rs
src/actions/: compare.rs  fill.rs  find.rs  info.rs  list.rs  mod.rs  placeholder_management.rs
