[package]
name = "getlicense"
version = "0.1.0"
edition = "2021"
authors = ["Kaden Gruizenga <kgruiz@umich.edu>"]
description = "A CLI tool to fetch, manage, and fill open source license templates from choosealicense.com."
license = "GPL-3.0-or-later"
repository = "https://github.com/kgruiz/getlicense"
readme = "README.md"
keywords = ["license", "cli", "opensource", "github", "generator"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
textwrap = "0.16"
indicatif = "0.17"
colored = "2"
dirs = "5"
unicode-ellipsis = "0.3.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "getlicense"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
